12 get user almost done
